// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-type-check > should allow to configure fork-ts-checker-webpack-plugin options 1`] = `
{
  "plugins": [
    ForkTsCheckerWebpackPlugin {
      "options": {
        "issue": {
          "exclude": [
            [Function],
            {
              "file": "src/**/*.ts",
            },
          ],
        },
        "logger": {
          "error": [Function],
          "log": [Function],
        },
        "typescript": {
          "build": false,
          "configFile": "<ROOT>/packages/plugin-type-check/tests/tsconfig.json",
          "memoryLimit": 8192,
          "mode": "readonly",
          "typescriptPath": "<ROOT>/node_modules/<PNPM_INNER>/typescript/lib/typescript.js",
        },
      },
    },
  ],
}
`;

exports[`plugin-type-check > should apply fork-ts-checker-webpack-plugin correctly 1`] = `
{
  "plugins": [
    ForkTsCheckerWebpackPlugin {
      "options": {
        "issue": {
          "exclude": [
            [Function],
          ],
        },
        "logger": {
          "error": [Function],
          "log": [Function],
        },
        "typescript": {
          "build": false,
          "configFile": "<ROOT>/packages/plugin-type-check/tests/tsconfig.json",
          "memoryLimit": 8192,
          "mode": "readonly",
          "typescriptPath": "<ROOT>/node_modules/<PNPM_INNER>/typescript/lib/typescript.js",
        },
      },
    },
  ],
}
`;
